--- a/v2.1/src/main/webapp/files/RegisterForm.html
+++ b/v2.1/src/main/webapp/files/RegisterForm.html
@@ -8,9 +8,9 @@
 		<td style=" padding-top: 20px;">
 		<div >
 			<form action="create" method="post">
-				<label for="uname" style="font-style: italic;" class="tw">Scegli il tuo Username:</label><br> <input
+				<label for="nome_utente" style="font-style: italic;" class="tw">Scegli il tuo Username:</label><br> <input
 					type="text" id="nome_utente" name="nome_utente" value="nome_utente"><br> <label
-					for="pass" style="font-style: italic;" class="tw">Scegli Password:</label><br> <input type="password"
+					for="password" style="font-style: italic;" class="tw">Scegli Password:</label><br> <input type="password"
 					id="password" name="password" value="password"><br>
 				<input type="submit" value="Submit" ><br>
 			</form>
