--- a/v2.1/src/main/webapp/files/fulllayout.part.html
+++ b/v2.1/src/main/webapp/files/fulllayout.part.html
@@ -19,11 +19,33 @@
 <div class="padding3"></div>
 <div><span id="rainbow" style="font:Times new Roman",Times,serif>jAvengers...ASSEMBLE!!</span></div>
 
+<div align="center">
+
+
+<table>
+  <tr>
+    <th style="border: 1px solid yellow; background-color: yellow"><a href="Homepage" style="background-color: yellow; color: red;">HOME</a></th>
+    <th style="border: 1px solid yellow; background-color: yellow"><a href="Punteggi" style="background-color: yellow; color: red">PUNTEGGI</a></th>
+    <th style="border: 1px solid yellow; background-color: yellow"><a href="Login" style="background-color: yellow; color: red">LOGIN</a></th>
+    <th style="border: 1px solid yellow; background-color: yellow"><a href="Registrati" style="background-color: yellow; color: red">REGISTRATI</a></th>
+    <th style="border: 1px solid yellow; background-color: yellow"><a href="Admin" style="background-color: yellow; color: red">ADMIN</a></th>
+    
+  </tr>
+
+</table>
+
+
+</div>
+
 
 
 <!-- Al posto di $content$ inseriremo un contenuto diverso in base alle esigenze. -->
+<div align="center">
 
 $content$
+
+</div>
+
 
 </div>
 
